# mattmusic

./: .gitignore  Cargo.toml  README.md
songs/: 10ms_delay.yaml  10ms_recirculating_delay.yaml  acid_filters.yaml  beyond_sine_tones.yaml  cauchy_transfer.yaml  clip.yaml  cross_fade_formant.yaml  delay_patch.yaml  doppler_vibrato.yaml  doppler_vibrato2.yaml  elementary_recirculating_filter.yaml  env.yaml  filter_sweep_patch.yaml  frequency_modulation.yaml  gaussian_transfer.yaml  hann.yaml  hann_formant.yaml  import_wav.yaml  long_note_acid_filters.yaml  long_note_simple_envelopes.yaml  many_notes.yaml  many_notes_250ms_delay.yaml  many_notes_250ms_recirculating_delay.yaml  many_notes_50ms_delay.yaml  many_notes_50ms_recirculating_delay.yaml  many_notes_acid_filters.yaml  many_notes_allpass_sweep.yaml  many_notes_phaser.yaml  many_notes_simple_envelopes.yaml  many_notes_vcf_adsr.yaml  many_notes_wavetable.yaml  one-pole-low-pass-filter.yaml  one-pole-one-zero-high-pass-filter.yaml  oscs.yaml  paf.yaml  phase_modulation.yaml  phaser_patch.yaml  pitch_shift.yaml  quadratic_transfer.yaml  recirculating_delay_impulse.yaml  (+11 more)
src/: buffer_reader.rs  buffer_writer.rs  cauchy_transfer.rs  clip.rs  cos_transfer.rs  db2amp.rs  dc.rs  delay_line.rs  ding_envelope.rs  envelope.rs  export_wav.rs  filters.rs  gaussian_transfer.rs  generative_waveform.rs  hann_window.rs  import_wav.rs  instruments.rs  knob.rs  lfo.rs  low_pass_filter.rs  main.rs  midi2freq.rs  midi_notes.rs  mix.rs  multiply.rs  noise.rs  oscillator.rs  pitch_shift.rs  pre_render.rs  pulse_train.rs  pure_tone.rs  ramp.rs  (+16 more)
(+42 files in other folders)
