[package]
name = "mattmusic"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.11", features = ["derive"] }
cpal = "0.15.2"
dyn-clone = "1.0.14"
evalexpr = "11.1.0"
hound = "3.5.0"
num = "0.4.1"
rand = "0.8.5"
serde = { version = "1.0.171", features = ["derive"] }
serde_yaml = "0.9.22"
